# AI_DSCubed_Project_1

./: .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt
src/aidscubed/: __init__.py  cli.py  config.py  core.py  tools.py
